--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "expo-blur": "~14.0.2",
     "expo-constants": "~17.0.4",
     "expo-dev-client": "~5.0.9",
+    "expo-document-picker": "~13.0.2",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.4",
     "expo-router": "~4.0.16",
+    "expo-sharing": "~13.0.1",
     "expo-splash-screen": "~0.29.20",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.1",
