--- a/app.json
+++ b/app.json
@@ -38,6 +38,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "404c50bb-24b7-4d1a-afa4-8747212760c5"
+      }
     }
   }
 }
