--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "eas-cli": "^16.4.0",
     "expo": "^52.0.25",
     "expo-blur": "~14.0.2",
     "expo-constants": "~17.0.4",
